--- a/booklist.html
+++ b/booklist.html
@@ -90,7 +90,7 @@
   <p>Books I’ve read, loved, or left half-finished.</p>
 
   <ul class="grid">
-    <li>25 QUOTES THAT WILL MAKE YOU AWARE OF THE POWER YOU HOLD </li>
+    <li>25 Quotes That Will Make You Aware of the Power You Hold </li>
     <li>The Hidden Hindu Trilogy</li>
     <li>The Art of Being Alone</li>
     <li>Skill People</li>
