--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <a href="happiness.html">Happiness</a>
     <a href="booklist.html">Reading List</a>
     <a href="shop.html">Shop 🛍️</a>
-    <a href="mailto:your@email.com">Contact</a>
+    <a href="mailto:travellertime932@gmail.com">Contact</a>
   </nav>
 
   <!-- Profile Section -->
