--- a/index.html
+++ b/index.html
@@ -159,7 +159,18 @@
     “I study what doesn’t exist. And I write what can't be said.” — Kinjal
   </div>
 
- 
+ <section style="text-align: center; padding: 4rem 1rem;">
+  <h2>Send a Message Anonymously 💌</h2>
+  <p style="max-width: 600px; margin: 0 auto; font-style: italic; color: #555;">
+    Something you’ve been meaning to say, something you need to let go of — share it anonymously. I’ll read it with care.
+  </p>
+
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeexampleformurl/viewform" target="_blank"
+     class="shop-button" style="margin-top: 2rem;">
+    🕊️ Submit Your Message
+  </a>
+</section>
+
 
 </body>
 </html>
