--- a/index.html
+++ b/index.html
@@ -159,14 +159,16 @@
 
   <!-- Anonymous Message Section -->
   <section style="text-align: center; padding: 4rem 1rem;">
-    <h2>Send a Message Anonymously 💌</h2>
+  
     <p style="max-width: 600px; margin: 0 auto; font-style: italic; color: #555;">
       Something you’ve been meaning to say, something you need to let go of — share it anonymously. I’ll read it with care.
     </p>
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeexampleformurl/viewform" target="_blank"
-       class="anon-button">
-      🕊️ Submit Your Message
-    </a>
+    <a href="https://docs.google.com/forms/d/e/1FAIpQLSfEwEXAMPLEurl/viewform" 
+   target="_blank"
+   class="anon-button">
+  Submit Your Message 💌
+</a>
+
   </section>
 
   <!-- Buy Me a Coffee Section -->
