--- a/index.html
+++ b/index.html
@@ -186,14 +186,10 @@
     </a>
 
     <p style="font-size: 0.95em; color: #666; margin-top: 1rem;">
-      <em>(The UPI button works only on mobile apps. If you're on desktop, use the QR code below.)</em>
+      <em>(The button works only on mobile apps. )</em>
     </p>
 
-    <!-- QR Code Section -->
-    <div style="margin-top: 1rem;">
-      <p>Or scan this QR code:</p>
-      <img src="qr.jpg" alt="Google Pay QR Code" style="width: 200px; border-radius: 12px;">
-    </div>
+   
   </section>
 
 </body>
