--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     @font-face {
       font-family: 'Centaur';
       src: url('fonts/centaur.woff') format('woff');
-      font-weight: normal;
-      font-style: normal;
     }
 
     body {
@@ -159,16 +157,15 @@
 
   <!-- Anonymous Message Section -->
   <section style="text-align: center; padding: 4rem 1rem;">
-  
+    <h2>Send a Message Anonymously 💌</h2>
     <p style="max-width: 600px; margin: 0 auto; font-style: italic; color: #555;">
       Something you’ve been meaning to say, something you need to let go of — share it anonymously. I’ll read it with care.
     </p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSfEwEXAMPLEurl/viewform" 
-   target="_blank"
-   class="anon-button">
-  Submit Your Message 💌
-</a>
-
+       target="_blank" 
+       class="anon-button">
+      🕊️ Submit Your Message
+    </a>
   </section>
 
   <!-- Buy Me a Coffee Section -->
@@ -176,7 +173,7 @@
     <h2>Support My Work ☕</h2>
     <p>If you like what I do, you can buy me a coffee!</p>
 
-    <!-- Clickable UPI Link -->
+    <!-- UPI Payment Button -->
     <a href="upi://pay?pa=travellertime932@okicici&pn=Kinjal%20Patel&am=150&cu=INR&tn=Thanks%20for%20the%20coffee!" 
        target="_blank" 
        style="display: inline-block; text-decoration: none;">
@@ -186,10 +183,8 @@
     </a>
 
     <p style="font-size: 0.95em; color: #666; margin-top: 1rem;">
-      <em>(The button works only on mobile apps. )</em>
+      <em>(The button works only on mobile apps. For desktop, contact directly.)</em>
     </p>
-
-   
   </section>
 
 </body>
