--- a/index.html
+++ b/index.html
@@ -187,11 +187,10 @@
            style="height: 90px; margin: 1rem auto;">
     </a>
     <p style="font-size: 0.95em; color: #666; margin-top: 1rem;">
-      <em>(UPI works on mobile apps only. If you're on desktop, feel free to contact instead.)</em>
+      <em>( works on mobile apps only.)</em>
     </p>
 
-    <!-- Optional QR code image -->
-    <img src="images/qr.jpg" alt="Scan QR" style="width: 180px; margin-top: 1rem; border-radius: 12px;" />
+  
   </section>
 
 </body>
