--- a/index.html
+++ b/index.html
@@ -161,17 +161,14 @@
     “I study what doesn’t exist. And I write what can't be said.” — Kinjal
   </div>
 
-  <!-- Submit Message Anonymously Section -->
-  <section style="padding: 4rem 1rem;">
-   
-    <p style="max-width: 600px; margin: 0 auto; font-style: italic; color: #555;">
-      Something you’ve been meaning to say, something you need to let go of — share it anonymously. I’ll read it with care.
-    </p>
- <a href="https://docs.google.com/forms/d/e/1FAIpQLSdl5scNvs-MkDdIl-os00psdcbI_XyFRCLqY7HZQ1QO4uZvbg/viewform" 
-   target="_blank"
-   class="anon-button">
-  💌 Submit Your Message
-</a>
+ <section id="ask-me">
+  <h2>Leave a Thought</h2>
+  <p style="max-width: 600px; margin: 0 auto; font-style: italic;">
+    A question, a confession, a quiet ache — I’ll read every word. I may respond in writing or silence.
+  </p>
+  <iframe src="https://docs.google.com/forms/d/e/your-form-id/viewform?embedded=true" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+</section>
+
 
   </section>
 
