--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     💬 Drop a Thought
   </button>
 
-  <form id="thought-form" action="https://formsubmit.co/your@email.com" method="POST" style="display:none; max-width: 500px; margin: 2rem auto;">
+  <form id="thought-form" action="https://formsubmit.co/travellertime932@gmail.com" method="POST" style="display:none; max-width: 500px; margin: 2rem auto;">
     <input type="text" name="name" placeholder="Your name (optional)" style="width: 100%; padding: 10px; margin-bottom: 10px; font-family: Georgia, serif;" />
     <textarea name="message" rows="5" placeholder="What would you like to share?" required style="width: 100%; padding: 10px; font-family: Georgia, serif;"></textarea>
     <button type="submit" class="shop-button" style="margin-top: 15px;">Send</button>
