--- a/booklist.html
+++ b/booklist.html
@@ -176,6 +176,12 @@
     <li>Sweet Bean Paste</li>
     <li>Convenience Store Woman</li>
     <li>Salt Water</li>
+    <li> The trouble with Rose </li>
+    <li> Cheaters </li>
+    <li> The vegetarian </li>
+    <li> Diary of a void </li>
+    <li> i who have never known men </li>
+    <li> The naga Warriors 1</li>
   </ul>
 
   <a href="https://time-traveller-2014.github.io/kinjal-s-words/" class="back-link">← Back to Home</a>
